--- a/src/Arcanum.UI/Components/Windows/MinorWindows/ConsoleWindow.xaml
+++ b/src/Arcanum.UI/Components/Windows/MinorWindows/ConsoleWindow.xaml
@@ -4,11 +4,9 @@
                          xmlns:mc = "http://schemas.openxmlformats.org/markup-compatibility/2006"
                          xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
                          xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses"
-                         mc:Ignorable = "d"
-                         Title = "Console"
-                         Height = "450"
-                         Width = "800"
-                         Background = "{StaticResource LightBackColorBrush}">
+                         xmlns:baseControls = "clr-namespace:Arcanum.UI.Components.UserControls.BaseControls"
+                         mc:Ignorable = "d" LostFocus = "ConsoleWindow_OnLostFocus" Title = "Console" Height = "450"
+                         Width = "800" Background = "{StaticResource LightBackColorBrush}">
 
     <styleClasses:BaseWindow.Resources>
         <ResourceDictionary>
@@ -25,36 +23,23 @@
             <RowDefinition Height = "30" />
         </Grid.RowDefinitions>
 
-        <styleClasses:CorneredTextBox Grid.Row = "0"
-                                      x:Name = "ConsoleOutputTextBox"
-                                      HorizontalScrollBarVisibility = "Disabled"
-                                      VerticalContentAlignment = "Top"
-                                      AcceptsReturn = "False"
-                                      IsReadOnly = "True"
-                                      BorderThickness = "0"
-                                      Margin = "0, 0, 0, 4"
-                                      HighlightOnFocus = "False"
+        <styleClasses:CorneredTextBox Grid.Row = "0" x:Name = "ConsoleOutputTextBox"
+                                      HorizontalScrollBarVisibility = "Disabled" VerticalContentAlignment = "Top"
+                                      AcceptsReturn = "False" IsReadOnly = "True" BorderThickness = "0"
+                                      Margin = "0, 0, 0, 4" HighlightOnFocus = "False"
                                       FontFamily = "{StaticResource DefaultMonospacedFont}">
-            <!-- CornerRadius = "5" -->
-
         </styleClasses:CorneredTextBox>
 
-        <styleClasses:CorneredTextBox Grid.Row = "1"
-                                      x:Name = "ConsoleInputTextBox"
+        <styleClasses:CorneredTextBox Grid.Row = "1" x:Name = "ConsoleInputTextBox"
                                       HorizontalScrollBarVisibility = "Disabled"
-                                      VerticalScrollBarVisibility = "Disabled"
-                                      TextWrapping = "NoWrap"
-                                      AcceptsReturn = "False"
-                                      IsReadOnly = "False"
-                                      BorderThickness = "0"
-                                      Margin = "0, 0, 0, 4"
-                                      HighlightOnFocus = "False"
+                                      VerticalScrollBarVisibility = "Disabled" TextWrapping = "NoWrap"
+                                      AcceptsReturn = "False" IsReadOnly = "False" BorderThickness = "0"
+                                      Margin = "0, 0, 0, 4" HighlightOnFocus = "False"
                                       PreviewKeyDown = "ConsoleInputTextBox_KeyDown"
                                       TextChanged = "ConsoleInputTextBox_TextChanged"
                                       FontFamily = "{StaticResource DefaultMonospacedFont}">
-            <!-- CornerRadius = "5" -->
-
         </styleClasses:CorneredTextBox>
+        <baseControls:SuggestionPopup x:Name = "AutoComplete" Grid.Row = "1" Margin = "2, -2, 2, 2" />
 
     </Grid>
 </styleClasses:BaseWindow>
