--- a/src/Arcanum.UI/SpecializedEditors/SpecializedEditor.xaml
+++ b/src/Arcanum.UI/SpecializedEditors/SpecializedEditor.xaml
@@ -51,7 +51,8 @@
                        Margin = "0, 1, 15, 0" HorizontalAlignment = "Center" VerticalAlignment = "Center" />
         </DockPanel>
 
-        <ToggleButton Grid.Row = "2" Height = "22" Checked = "ToggleButton_Update" Unchecked = "ToggleButton_Update">
+        <ToggleButton Grid.Row = "2" Height = "22" x:Name = "EnabledToggleButton"
+                      Checked = "ToggleButton_Update" Unchecked = "ToggleButton_Update">
             <!-- Add to the style by changing the content when toggled -->
             <ToggleButton.Style>
                 <Style TargetType = "ToggleButton" BasedOn = "{StaticResource BlueToggleButtonStyle}">
