--- a/src/Arcanum.UI/Components/Windows/MinorWindows/ErrorLog.xaml
+++ b/src/Arcanum.UI/Components/Windows/MinorWindows/ErrorLog.xaml
@@ -300,7 +300,7 @@
 
                     <styleClasses:BaseButton Grid.Column = "1" MouseUp = "ExportToCsv_OnClick"
                                              Click = "ExportToCsv_LeftOnClick"
-                                             ToolTip = "Export the error log to a .csv file&#10;RMB to export and open the file"
+                                             ToolTip = "Export the error log to a .csv file&#10;RMB to export and open the file&#10;CTRL + LMB to export fix list"
                                              Margin = "2, 0" BorderBrush = "{StaticResource DefaultBackColorBrush}">
                         <Image Source = "/Arcanum_UI;component/Assets/Icons/20x20/ExportAsCsv20x20.png" Width = "20"
                                Height = "20">
