Added debug NameGenerator window with UI and resource integration
- Implemented NameGenerator UI for debugging language-based name generation.
- Integrated `.lang` resources for various languages.
- Updated project files to properly embed `.lang` resources.
- Removed reference to WPF from Arcanum.Core

--- a/src/Arcanum.UI/Components/Windows/DebugWindows/DebugPanel/DebugPanelGrid.xaml
+++ b/src/Arcanum.UI/Components/Windows/DebugWindows/DebugPanel/DebugPanelGrid.xaml
@@ -68,8 +68,12 @@
                                      Click = "ExperimentalRenameButton_Click" />
 
             <styleClasses:BaseButton Content = "Command Generator" Margin = "2" Padding = "4"
-                                     Click = "CommandGenerator_OnClick">
-            </styleClasses:BaseButton>
+                                     Click = "CommandGenerator_OnClick" />
+
+            <styleClasses:BaseButton Content = "Word Generator" Margin = "2" Padding = "4"
+                                     Click = "WordGenerator_OnClick" />
+
+
         </StackPanel>
 
         <ContentPresenter Grid.Column = "1" x:Name = "DebugView">
